@@ -1,3 +1,8 @@
+1999-01-02 Raffaele Sena <raff@aromatic.com> via Russell Nelson <nelson@crynwr.com>
+
+	* Fix to autogen.sh for build directory different from package
+	top directory.
+
 1998-12-16  Andrew T. Veliath  <andrewtv@usa.net>
 
 	* Update version to 0.5.8
